noinst_PROGRAMS = trivial delayedloop stream

INCLUDES = -I$(top_srcdir)/include -I$(top_builddir)/include -I/usr/local/apr/include/apr-1

trivial_SOURCES = trivial.cpp
trivial_LDADD = $(top_builddir)/src/liblog4cxx.la

delayedloop_SOURCES = delayedloop.cpp
delayedloop_LDADD = $(top_builddir)/src/liblog4cxx.la

stream_SOURCES = stream.cpp
stream_LDADD = $(top_builddir)/src/liblog4cxx.la



