EXTRA_DIST = \
	tests.dsw\
	hierarchy_test.dsp\
	level_test.dsp\
	ndc_test.dsp\
	mdc_test.dsp\
	filter_test.dsp\
	consoleappender_test.dsp\
	fileappender_test.dsp\
	htmllayout_test.dsp\
	xmllayout_test.dsp\
	tests.dsp\
	ttcclayout_test.dsp\
	patternlayout_test.dsp\
	propertyconfigurator_test.dsp\
	domconfigurator_test.dsp

